--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
         <p>K-Pay:+959-775-463-348</p>
         <p>(မှတ်ချက်:၅၀၀ကျပ်မှ ၂၀၀၀ကျပ်အထိသာလှူပေးပါဗျ။)</p>
+        <hr>
+        <p>*အထက်ပါအကြောင်းအရာများသည် github/repository ပိုင်ရှင်နှင့်သက်ဆိုင်ခြင်းမရှိပါ။ အခမဲ့ရေးဆွဲပေးထားခြင်းသာဖြစ်ပါသည်။*</p>
         
     </div>
 
